...
          backgroundColor: Appcolors.primaryColor,
          shape: RoundedRectangleBorder(borderRadius: BorderRadius.circular(14)),
          elevation: 0,
        ),
        onPressed: null, // هتتفعل لما تربط الداتا
        child: Text(
          'Save Changes',
          style: AppTextStyles.button.copyWith(color: Colors.white),
        ),
      ),
    );
  }
}
